--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,23 @@
 [package]
 name = "telly"
-version = "0.1.0"
-edition = "2021"
-authors = ["Andrea Raponi <andrearaponi@protonmail.com>"]
+version = "0.2.0"
+edition = "2024"
+authors = ["Andrea Raponi <andrearaponi@outlook.com>"]
 description = "A tool to send message from bot telegram"
 readme = "README.md"
 homepage = "https://github.com/andrearaponi/Telly"
 repository = "https://github.com/andrearaponi/Telly"
 keywords = ["cli", "telegram-bot"]
 categories = ["command-line-utilities"]
+license = "MIT"
 
 [dependencies]
-clap = { version = "3.0", features = ["derive"] }
-curl = "0.4.43"
-configparser = "3.0.0"
-urlencoding = "2.1.0"
+clap = { version = "4.4", features = ["derive"] }
+configparser = "3.0.2"
+curl = "0.4.46"
+urlencoding = "2.1.3"
 
+[dev-dependencies]
+tempfile = "3.8.0"
+assert_cmd = "2.0.12"
+predicates = "3.0.4"
